<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/username_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/username_label"
                android:text="@string/username"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/username_field"
                android:hint="@string/username_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/password_label"
                android:text="@string/password"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password_field"
                android:hint="@string/password_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/confirm_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/confirm_label"
                android:text="@string/confirm"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/confirm_field"
                android:hint="@string/confirm_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_below="@id/login_form"
            android:layout_alignRight="@id/login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

</RelativeLayout>
